# kinesisvideo-common

./: .travis.yml  CONTRIBUTING.md  README.md
.github/: build_and_test.yml
.github/workflows/: build_and_test.yml  build_and_test_release_latest.yml  release_latest.repos
kinesis_manager/: CHANGELOG.rst  CMakeLists.txt  FindKVSSDK.cmake  package.xml
kinesis_manager/include/kinesis_manager/: common.h  default_callbacks.h  kinesis_stream_manager.h  stream_definition_provider.h  stream_subscription_installer.h
kinesis_manager/kvssdk/: CMakeLists.txt  apply-kvs-patch  install-kvs
kinesis_manager/src/: default_callbacks.cpp  kinesis_stream_manager.cpp  stream_definition_provider.cpp
kinesis_manager/test/: default_callbacks_test.cpp  kinesis_manager_test.cpp
