<?xml version="1.0"?>
<package format="2">
  <name>kinesis_manager</name>
  <version>1.0.0</version>
  <description>AWS Kinesis stream management library intended for use with the Kinesis Video Producer SDK</description>
  <url>http://wiki.ros.org/kinesis_manager</url>

  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>cmake</buildtool_depend>

  <depend>aws_common</depend>
  <depend>curl</depend>
  <depend>libssl-dev</depend>
  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
